@@ -1,4 +1,7 @@
-Kiwix 0.8 RC1
+Kiwix 0.8 rc1
+* high reducing of the xapian index disk usage
+
+Kiwix 0.8 beta5
 * Small improvements of the Spanish translations&shortcuts
 * Bug fix by the indexing process observer (ID: 2811642)
 * Add a gray version of the buttons
